@@ -1,3 +1,7 @@
+27 April 2004  Sylvain Pion
+- Regenerate test/Width_3/makefile :
+  it eliminates "-g", which happens to make PGCC happier.
+
 1.19 20 Feb 2004 Andreas Fabri
 Removed #ifdef CGAL_USE_POLYHEDRON_DESIGN_ONE
 
